k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentry-data
  labels:
    app.kubernetes.io/name: sentry-data
